tests/thymeleaf-tests-spring6/src/test/resources/templateengine/springintegration/errors/errors02.thtest
%EXTENDS ../springintegration.common
# ------------------------------------------------------------
%CONTEXT

bindingError01 = #{ 'binding' : 'formBean01_01',\
                    'field' : 'name',\
                    'message' : 'Name has to be < than \\'aa\\''}
bindingError02 = #{ 'binding' : 'formBean01_01',\
                    'field' : 'name',\
                    'message' : 'Name has to be >= than \\'ab\\''}
                    
bindingErrors = { bindingError01, bindingError02 }
# ------------------------------------------------------------
%INPUT
<form action="#" th:action="@{/process}" th:object="${formBean01_01}" method="post">

  <fieldset>

    <ul th:if="${#fields.hasErrors('*')}" class="errorlist">
      <li th:each="err : ${#fields.errors('*')}" th:text="${err}">Input is incorrect</li>
    </ul>

    <ul th:if="${#fields.hasErrors('name')}" class="errorlist">
      <li th:each="err : ${#fields.errors('name')}" th:text="${err}">Input is incorrect</li>
    </ul>

    <ul th:if="${#fields.hasErrors('date')}" class="errorlist">
      <li th:each="err : ${#fields.errors('date')}" th:text="${err}">Input is incorrect</li>
    </ul>
      
    <div>
      Name: <input type="text" th:field="*{name}" />
    </div>
    
  </fieldset>
      
</form>
# ------------------------------------------------------------
%OUTPUT
<form action="/testing/process" method="post">

  <fieldset>
      
    <ul class="errorlist">
      <li>Name has to be &lt; than &#39;aa&#39;</li>
      <li>Name has to be &gt;= than &#39;ab&#39;</li>
    </ul>
      
    <ul class="errorlist">
      <li>Name has to be &lt; than &#39;aa&#39;</li>
      <li>Name has to be &gt;= than &#39;ab&#39;</li>
    </ul>
    
    <div>
      Name: <input type="text" id="name" name="name" value="Mark Lettuce" />
    </div>
    
  </fieldset>
      
</form>
